-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.0 RC, 6.6.0 FF
-
None
-
-
aebd77e51 (6.5.0), 2d7fe23b4 (dev), 3f8a4345c (6.5), 3072218eb (dev), a67b1a6d3 (6.8)
A fresh build of QQEM from dev branch works, and then if I exit and run it again it doesn't work... in the same shell and with the same Qt build. When it fails I get strange errors like this, which don't make sense when I look at the QML code (seems like it should be ok):
[ 0.000 W] default QQmlApplicationEnginePrivate::finishLoad - QQmlApplicationEngine failed to load component [ 0.000 W] default unknown - qrc:/qml/main.qml:559:5: Type MainView unavailable [ 0.000 W] default unknown - qrc:/qml/MainView.qml:53:5: Type PropertyEditDialog unavailable [ 0.000 W] default unknown - qrc:/qml/PropertyEditDialog.qml:165:21: Cannot assign to non-existent property "text"
Another time I got another error: Image.mipmap not available in Qt Quick 255.255. So maybe it's a QML engine bug actually.
Whereas if I want to try the 6.5 beta Qt release, I need to switch to the 6.5 qqem branch. That one doesn't show the shader preview, it seems.
- relates to
-
QTBUG-109314 Crash during QML item creation
-
- Closed
-
-
QTBUG-111857 tst_snippets verify:qtquickcontrols-material-attributes fails on macOS
-
- Closed
-
- resulted from
-
QTBUG-111042 QML cache files are re-generated all the time when they contain inline components
-
- Closed
-